# lime

./: Cargo.toml  notes.md
crates/generic-def/: Cargo.toml
crates/generic-def/src/: boolhint.rs  boolset.rs  cell.rs  func.rs  lib.rs  operand.rs  operands.rs  operation.rs  outputs.rs
crates/generic-def/src/func/: and.rs  constant.rs  maj.rs  mod.rs
crates/macros/: Cargo.toml
crates/macros/src/: lib.rs
crates/macros/src/generic/: ast.rs  cells.rs  mod.rs  operands.rs  operations.rs  outputs.rs
rs/: Cargo.toml
rs/src/: lib.rs  util.rs
rs/src/ambit/: compilation.rs  mod.rs  program.rs  rows.rs
rs/src/gp/: cost.rs  definitions.rs  dsl.rs  mod.rs  ops.rs  program.rs  state.rs
rs/src/gp/copy/: constant_mapping.rs  discovery.rs  discovery_constant.rs  graph.rs  mod.rs
rs/src/gp/def/: cell.rs  func.rs  mod.rs  operand.rs  operands.rs  operation.rs
rs/src/gp/ops/: constant.rs  copy.rs  mod.rs
rs/src/gp/program/: egraph.rs  mod.rs
