[workspace]
resolver = "3"
members = ["crates/*", "rs"]

[workspace.dependencies]
lime-generic-def = { path = "crates/generic-def" }
lime-macros = { path = "crates/macros" }
eggmock = { path = "../eggmock" }

rustc-hash = "2.1.0"
either = "1.13.0"
smallvec = "1.14.0"
ouroboros = "0.18.0"
derive-where = "1.5.0"
derive_more = { version = "2.0.1", features = ["full"] }
paste = "1.0.15"
strum = { version = "0.27.1", features = ["derive"] }
itertools = "0.14.0"
convert_case = "0.8.0"
delegate = "0.13.3"
blanket = "0.4.0"

[workspace.lints.rust]
unused_extern_crates = "forbid"
