[package]
name = "lime-rs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
lime-macros = { workspace = true }
eggmock = { path = "../../eggmock" }
rustc-hash = "2.1.0"
either = "1.13.0"
smallvec = "1.14.0"
ouroboros = "0.18.0"
derive-where = "1.5.0"
derive_more = { version = "2.0.1", features = ["full"] }
paste = "1.0.15"
itertools = "0.14.0"

[build-dependencies]
eggmock = { path = "../../eggmock" }
