[package]
name = "lime-rs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
lime-macros = { workspace = true }
lime-generic-def = { workspace = true }
eggmock = { workspace = true }
rustc-hash = { workspace = true }
either = { workspace = true }
smallvec = { workspace = true }
ouroboros = { workspace = true }
derive-where = { workspace = true }
derive_more = { workspace = true }
paste = { workspace = true }
itertools = { workspace = true }

[build-dependencies]
eggmock = { workspace = true }
