[package]
name = "lime-macros"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
lime-generic-def = { workspace = true }
derive_more = { workspace = true }
syn = { version = "2" }
quote = { version = "1" }
proc-macro2 = "1"
itertools = { workspace = true }
convert_case = { workspace = true }
